--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,7 +15,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Instalar dependencias
-        run: npm install
+        run: npm instal
 
       - name: Compilar aplicación
         run: npm run build
